# python-project-template

./: .gitattributes  .gitignore  .gitlab-ci.yml  pyproject.toml  readme.md
.gitlab/: renovate.json5  route-map.yml
doc/: dependencies.md  pypi.md  specs.md  todo.md
doc/documentation/: index.html  temp.md
doc/homepage/: index.html
docs/: mkdocs.yaml  pypi.md  todo.md
docs/homepage/: index.html
docs/include/: example.py
docs/overrides/partials/: actions.html
docs/src/: contributing.md  index.md  structure.md
docs/src/features/: debugging.md  dependencies.md  development.md  documentation.md  release.md
examples/: 1.py  example1.py  ignore.py  readme.md
project_template/: __init__.py  __main__.py  cli.py
python_template/: __main__.py  cli.py  core.py
src/python_template/: __main__.py  cli.py  core.py
tests/: __init__.py  core_tests.py
